expected/main/gens/primIxCompare-neg-32.err
ERROR: "actual/main/gens/primIxCompare-neg-32.lc", line 4
external ixEq0     {primIxEq      0} :: Ix 0     -> Ix 0     -> Bool
         ^
No generated implementation: 0 is not a valid index limit; should be between 1 and 2147483647

ERROR: "actual/main/gens/primIxCompare-neg-32.lc", line 5
external ixEq2049M {primIxEq  2049M} :: Ix 2049M -> Ix 2049M -> Bool
         ^
No generated implementation: 2148532224 is not a valid index limit; should be between 1 and 2147483647

ERROR: "actual/main/gens/primIxCompare-neg-32.lc", line 6
external ixEq2G    {primIxEq     2G} :: Ix 2G    -> Ix 2G    -> Bool
         ^
No generated implementation: 2147483648 is not a valid index limit; should be between 1 and 2147483647

ERROR: Aborting after 3 previously reported errors

